--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <HTML>
 <HEAD>
-<TITLE>Your Title Here</TITLE>
+<TITLE>Minu koduülesanne</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="taltech.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
-<a href="http://www.ttu.ee">Link Name</a>
-is a link to another nifty site
-<H1>This is a Header</H1>
-<H2>This is a Medium Header</H2>
-Send me mail at <a href="mailto:support@yourcompany.com">
-support@yourcompany.com</a>.
-<P> http://www.ttu.ee !
-<P> <B>This is a new paragraph!</B>
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<H1>see veebileht on loodud esimese loengu järgseks kontolltööks, siin veebilehel on kasutatud paragraph tagi, table tagi, image tagi, hyperlinki, headerit</H1>
+<P> Martiklinumber: 193626
+<table>
+<table style="width:100%">
+  <caption>Info</caption>
+  <tr>
+    <th>Eesnimi</th>
+    <th>Perekonnanimi</th>
+    <th>Sünniaeg</th>
+    <th>Isikukood</th>
+  </tr>
+  <tr>
+    <td>Karl-Eerik</td>
+    <td>Pikk</td>
+    <td>20.12.1998</td>
+    <td>39812206020</td>
+  </tr>
+</table>
 <HR>
 </BODY>
+<CENTER><IMG SRC="taltech.jpg" ALIGN="BOTTOM"> </CENTER>
+<a href="http://www.ttu.ee">http://www.ttu.ee</a>
 </HTML>
 
  
