--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <TITLE>Minu koduülesanne</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="taltech.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
 <H1>see veebileht on loodud esimese loengu järgseks kontolltööks, siin veebilehel on kasutatud paragraph tagi, table tagi, image tagi, hyperlinki, headerit</H1>
 <P> Martiklinumber: 193626
@@ -25,7 +24,7 @@
 </table>
 <HR>
 </BODY>
-<CENTER><IMG SRC="taltech.jpg" ALIGN="BOTTOM"> </CENTER>
+<CENTER><IMG SRC="taltech.jpg" width="500" height="600"> ALIGN="BOTTOM"> </CENTER>
 <a href="http://www.ttu.ee">http://www.ttu.ee</a>
 </HTML>
 
