--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </table>
 <HR>
 </BODY>
-<CENTER><IMG SRC="taltech.jpg" width="500" height="600"> ALIGN="BOTTOM"> </CENTER>
+<CENTER><IMG SRC="taltech.jpg" width="500" height="600" ALIGN="BOTTOM"> </CENTER>
 <a href="http://www.ttu.ee">http://www.ttu.ee</a>
 </HTML>
 
